# Restaraunt-Reservation-and-Food-Delivary-System

./: .env  .gitignore  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_PLAN.md  README.md  ROADMAP.md  generate_password_hash.py  manage.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  logging.ini  main.py  settings.py
app/api/: deps.py
app/controllers/: address_controller.py  auth_controller.py  cart_controller.py  category_controller.py  delivery_controller.py  delivery_task_controller.py  inventory_controller.py  menu_item_controller.py  notification_controller.py  order_controller.py  order_item_controller.py  payment_controller.py  reservation_controller.py  restaurant_controller.py  review_controller.py  support_ticket_controller.py  user_controller.py
app/db/: create_database.py  create_tables.py  database.py  session.py
app/middleware/: auth_middleware.py
app/schemas/: address.py  cart.py  category.py  delivery.py  delivery_task.py  inventory.py  menu_item.py  notification.py  order.py  order_item.py  payment.py  reservation.py  restaurant.py  review.py  support_ticket.py  user.py
app/security/: auth.py  jwt.py
app/services/: address_service.py  auth_service.py  cart_service.py  category_service.py  delivary_task_service.py  delivery_service.py  delivery_task_service_fixed.py  email_service.py  inventory_service.py  menu_service.py  notification_service.py  order_item_service.py  order_item_service_sync.py  order_service.py  order_service_sync.py  payment_service.py  reservation_service.py  restaurant_service.py  review_service.py  support_service.py  user_registration.py  user_service.py
app/utils/: db_helpers.py  model_helpers.py
database/: base.py
frontend/: README.md  index.html  package-lock.json  package.json
models/: billing_model.py  category_model.py  discount_model.py  inventory_model.py  menu_item_model.py  order_model.py  reservation_model.py  settings_model.py  staff_model.py  supplier_model.py  table_model.py  user_model.py
scripts/: lint.py
tests/: main.py
(+249 files in other folders)
